Refactor GTN_CreosoteEngine